# zelva

./: .gitignore  README.md  pyproject.toml  requirements.txt
src/zelva/: __init__.py  app.py  main.py  wsgi.py
src/zelva.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src/zelva/static/: styles.css  turtle.js
src/zelva/templates/: admin.html  index.html  sandbox.html
tests/: test_main.py
