[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "zelva"
version = "0.1.0"
description = "Flask aplikace pro webovou zelvi grafiku"
requires-python = ">=3.10"
dependencies = [
	"flask>=3.0.0",
	"gunicorn>=22.0.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
